--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Reading Challenge App</a>
+        <a class="navbar-brand" href="#">Reading Challenge App Test</a>
         <button
           class="navbar-toggler"
           type="button"
