--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="./index.css" />
     <script src="./index.js" type="module" defer></script>
 
-    <title>Reading Challenge App</title>
+    <title>Reading Challenge App!</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
