Add progress bar design

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 >
                   Close
                 </button>
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-success">
                   Get Started!
                 </button>
               </div>
@@ -177,7 +177,161 @@
           </div>
         </div>
       </div>
+
       <!-- dynamically create content here -->
+      <section
+        id="user-challenge-page"
+        class="container justify-content-center"
+      >
+        <h1>Book Riot Read Harder Challenge</h1>
+        <p id="deadline">Deadline: 31/12/22</p>
+        <div class="progress" style="height: 20px">
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+            href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-secondary border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+          <a
+            class="progress-bar bg-success border"
+            role="progressbar"
+            style="width: 4.16%"
+          href="#"
+          ></a>
+        </div>
+      </section>
     </main>
     <!-- Bootstrap Bundle with Popper -->
     <script
